tests/snapshots/verdict_serde__fail_with_distribution.snap
---
source: tests/verdict_serde.rs
expression: "serde_json::to_value(&record).unwrap()"
---
{
  "covariateStatus": {
    "aligned": true
  },
  "execution": {
    "cost": {
      "samplesExecuted": 100,
      "totalTimeMs": 500,
      "totalTokens": 1234
    },
    "failures": 5,
    "samplesExecuted": 100,
    "samplesPlanned": 100,
    "successes": 95,
    "termination": {
      "reason": "COMPLETED"
    }
  },
  "functionalAssessment": {
    "composite": "FAIL",
    "criteria": [
      {
        "fail": 20,
        "failureDistribution": {
          "content": 8,
          "parse": 12
        },
        "name": "result",
        "pass": 80,
        "passRate": 0.8,
        "verdict": "FAIL"
      }
    ]
  },
  "identity": {
    "testName": "translates",
    "useCaseId": "basket"
  },
  "intent": "VERIFICATION",
  "methodologyVersion": "1.5.0",
  "statisticalAnalysis": {
    "alpha": 0.05,
    "confidenceLevel": 0.95,
    "decisionRule": "regression/fisher",
    "decisionRuleVersion": 1,
    "evidence": {
      "baselineSuccesses": 951,
      "baselineTrials": 1000,
      "cutoff": 91,
      "sizeAtAssumedCommonRate": 0.033967392625028556
    },
    "standardError": 0.04,
    "threshold": 0.91,
    "thresholdOrigin": "EMPIRICAL",
    "wilsonLower": 0.7266961911903833
  },
  "verdict": "FAIL",
  "verdictReason": "80 of 100 observed",
  "warnings": [
    {
      "code": "BASELINE_EXPIRED",
      "message": "Baseline is 45 days old"
    }
  ]
}
