tests/snapshots/verdict_serde__inconclusive_covariate_misalignment.snap
---
source: tests/verdict_serde.rs
expression: "serde_json::to_value(&record).unwrap()"
---
{
  "covariateStatus": {
    "aligned": false,
    "baselineProfile": {
      "model": "gpt-4o"
    },
    "misalignments": [
      {
        "baselineValue": "gpt-4o",
        "key": "model",
        "observedValue": "gpt-3.5"
      }
    ],
    "observedProfile": {
      "model": "gpt-3.5"
    }
  },
  "execution": {
    "cost": {
      "samplesExecuted": 100,
      "totalTimeMs": 500,
      "totalTokens": 1234
    },
    "failures": 5,
    "samplesExecuted": 100,
    "samplesPlanned": 100,
    "successes": 95,
    "termination": {
      "reason": "COMPLETED"
    }
  },
  "functionalAssessment": {
    "composite": "INCONCLUSIVE",
    "criteria": [
      {
        "fail": 15,
        "name": "result",
        "pass": 85,
        "passRate": 0.85,
        "verdict": "INCONCLUSIVE"
      }
    ]
  },
  "identity": {
    "testName": "accurate_enough",
    "useCaseId": "classifier"
  },
  "intent": "VERIFICATION",
  "methodologyVersion": "1.5.0",
  "verdict": "INCONCLUSIVE",
  "verdictReason": "covariate misalignment"
}
