tests/snapshots/verdict_serde__pass_with_baseline_provenance.snap
---
source: tests/verdict_serde.rs
expression: "serde_json::to_value(&record).unwrap()"
---
{
  "baselineProvenance": {
    "baselineRate": 0.95,
    "baselineSamples": 200,
    "derivedThreshold": 0.9,
    "generatedAt": "2026-03-01T12:00:00Z",
    "sourceFile": "service.yaml"
  },
  "correlationId": "run-abc",
  "covariateStatus": {
    "aligned": true
  },
  "environment": {
    "region": "eu-west-1"
  },
  "execution": {
    "cost": {
      "samplesExecuted": 100,
      "totalTimeMs": 500,
      "totalTokens": 1234
    },
    "failures": 5,
    "samplesExecuted": 100,
    "samplesPlanned": 100,
    "successes": 95,
    "termination": {
      "reason": "COMPLETED"
    }
  },
  "functionalAssessment": {
    "composite": "PASS",
    "criteria": [
      {
        "fail": 5,
        "name": "result",
        "pass": 95,
        "passRate": 0.95,
        "verdict": "PASS"
      }
    ],
    "mode": "enforced"
  },
  "identity": {
    "testName": "meets_sla",
    "useCaseId": "service"
  },
  "intent": "VERIFICATION",
  "methodologyVersion": "1.6.0",
  "specProvenance": {
    "contractRef": "Baseline v1",
    "expiration": {
      "expiresAt": "2026-06-01T00:00:00Z",
      "status": "EXPIRING_SOON"
    },
    "specFilename": "service.yaml",
    "thresholdOrigin": "EMPIRICAL"
  },
  "statisticalAnalysis": {
    "alpha": 0.05,
    "confidenceLevel": 0.95,
    "decisionRule": "regression/fisher",
    "decisionRuleVersion": 1,
    "evidence": {
      "baselineSuccesses": 951,
      "baselineTrials": 1000,
      "cutoff": 91,
      "sizeAtAssumedCommonRate": 0.033967392625028556
    },
    "standardError": 0.021794494717703377,
    "threshold": 0.91,
    "thresholdOrigin": "EMPIRICAL",
    "wilsonLower": 0.9008389147209472
  },
  "verdict": "PASS",
  "verdictReason": "95 of 100 observed"
}
