tests/snapshots/verdict_serde__pass_with_pacing.snap
---
source: tests/verdict_serde.rs
expression: "serde_json::to_value(&record).unwrap()"
---
{
  "covariateStatus": {
    "aligned": true
  },
  "execution": {
    "cost": {
      "samplesExecuted": 100,
      "totalTimeMs": 500,
      "totalTokens": 1234
    },
    "failures": 5,
    "samplesExecuted": 100,
    "samplesPlanned": 100,
    "successes": 95,
    "termination": {
      "reason": "COMPLETED"
    }
  },
  "functionalAssessment": {
    "composite": "PASS",
    "criteria": [
      {
        "fail": 5,
        "name": "result",
        "pass": 95,
        "passRate": 0.95,
        "verdict": "PASS"
      }
    ]
  },
  "identity": {
    "testName": "paced",
    "useCaseId": "service"
  },
  "intent": "VERIFICATION",
  "methodologyVersion": "1.5.0",
  "pacing": {
    "effectiveConcurrency": 1,
    "effectiveMinDelayMs": 100,
    "effectiveRps": 10.0,
    "maxConcurrent": 1,
    "maxRpm": 0.0,
    "maxRps": 10.0
  },
  "verdict": "PASS",
  "verdictReason": "95 of 100 observed"
}
